# legacy-stuff

./: .gitignore  README.md
algorithms/: README.md  build.sh
algorithms/L0/: L0Q1.cpp  L0Q1.in  L0Q1.out  L0Q2.cpp  L0Q2.in  L0Q2.out  L0Q3.cpp  L0Q3.in  L0Q3.out  L0QD.cpp
algorithms/L1/: L1Q1.cpp  L1Q1.cpp.1  L1Q1.out  L1Q1E1WIN.in  L1Q1M.out  L1Q2.cpp  L1Q2.cpp.1  L1Q2.in  L1Q2.out  L1QD.cpp  L1QD.cpp.1  L1QD.in  L1QD.out
algorithms/L2/: L2Q1.cpp  L2Q1.in  L2Q1.out  L2Q1.py  L2Q1PEQUENO.in  L2Q1PEQUENO.out  L2QD.cpp  L2QD.in  L2QD.in2  L2QD.out  gen.cpp
algorithms/L3/: L3Q1  L3Q1.cpp  L3Q1.in  L3Q2  L3Q2.cpp  L3Q2.in  L3Q2.out  a.txt
algorithms/L4/: L4Q1.cpp  L4Q2.cpp
algorithms/L5/: L5Q1.cpp  L5Q2.cpp
algorithms/L6/: L6Q1.cpp  L6Q1.in  L6Q1.out  L6Q2.cpp
algorithms2/: .build.sh.swp  L1Q1.cpp  L1Q2.cpp  L1Q3.cpp  L2Q1.cpp  L2Q2.cpp  L2Q3.cpp  L2Q4.cpp  L3Q1.cpp  L3Q2.cpp  L4Q2.cpp  L4Q3.cpp  build.sh
bsplines/: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  bsplines.glade  bsplines.gladep  config.h  config.status  configure  configure.in
bsplines/po/: Makefile  Makefile.in
bsplines/src/: Makefile  Makefile.am  Makefile.in  bsplines  callbacks.cpp  callbacks.h  interface.cpp  main.c
bsplines/src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
foogame-1.0.0/: ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  audio.cpp  audio.h  config.h  config.h.in  config.status  configure  configure.in  exceptions.h  graph.cpp  graph.h  install_headers  libtool  log.cpp  log.h  mkinstalldirs  timer.cpp  timer.h
gbcamcgtk/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.in  README  README.md  TODO  aclocal.m4  cam.h  config.h  config.status  configure  configure.in
gbcamcgtk/debian/: changelog  control  copyright  rules
gbcamcgtk/src/: Makefile.am  Makefile.in  gui.c  gui.h  gui_callbacks.c  gui_interface.c  logo.h
gnome-sensors/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in  configure  configure.in  libtool
gnome-sensors/debian/: changelog  control  copyright  dirs  files  rules
gnome-sensors/doc/: gsensors.1
gnome-sensors/src/: GNOME_GSensors.server  Makefile.am  Makefile.in  gnome-sensors.c  gnome-sensors.h
painters-algorithm/: .cdtproject  .project  Makefile  README.md  basetb.cpp  camera.conf  camera.cpp  camera.h  cena.conf  cena.cpp  cena.h  config.h  cor.cpp  cor.h  main.cpp  matriz.cpp  matriz.h  objeto.conf  objeto3d.cpp  objeto3d.h  parametros.cpp  parametros.h  ponto.cpp  ponto.h  primitives.cpp  primitives.h  tri.byu  triangulo.cpp  triangulo.h  vetor.cpp  vetor.h
