lib_LIBRARIES = libfoogame.a
lib_LTLIBRARIES = libfoogame.la
libfoogame_a_SOURCES = graph.cpp graph.h audio.cpp audio.h \
		exceptions.h timer.cpp timer.h log.cpp log.h

libfoogame_la_SOURCES = graph.cpp graph.h audio.cpp audio.h \
		exceptions.h timer.cpp timer.h log.cpp log.h

libfoogame_la_LDFLAGS = -version-info 1
